--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@
 		width: 100%;
 		max-width: 1300px;
 		padding: 0;
+		
 	}
 
 	.navbar__menu {
@@ -273,15 +274,19 @@
 	width: auto;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 960px) {
 	.main__container {
 		display: grid;
 		grid-template-columns: auto;
 		align-items: center;
 		justify-self: center;
 		width: 100%;
-		margin: 0 auto;
-		height: 90vh;
+		padding: 0 auto;
+		height: 120vh;
+	}
+
+	#index_container {
+		padding-bottom: 90%;
 	}
 
 	.main__content {
