--- a/styles.css
+++ b/styles.css
@@ -369,6 +369,21 @@
 	color: #fff;
 }
 
+.account__card_nohover {
+	margin: 5rem;
+	height: 350px;
+	width: 350px;
+	border: 11px solid var(--border-color);
+	border-radius: 50%;
+	margin-bottom: 5rem;
+	background-size: contain;
+	background-repeat: no-repeat;
+	position: relative;
+	background-size: cover;
+	background-position: center;
+	color: #fff;
+}
+
 #container_padding_down {
 	padding-bottom: 5rem;
 }
