--- a/styles.css
+++ b/styles.css
@@ -304,10 +304,6 @@
 		margin-top: 2rem;;
 	}
 
-	.main__content h2 {
-		font-size: 2rem;
-	}
-
 	.main__content p {
 		margin-top: 1rem;
 		font-size: 1.5rem;
@@ -318,10 +314,6 @@
 	.main__content h1 {
 		font-size: 2rem;
 		margin-top: 3rem;
-	}
-
-	.main__content h2 {
-		font-size: 1.5rem;
 	}
 
 	.main__content p {
@@ -351,6 +343,7 @@
 
 #accounts_container {
 	height: 25vh;
+	width: 100vw;
 	display: flex;
 	justify-content: center;
 }
@@ -442,18 +435,14 @@
 }
 
 @media screen and (max-width: 960px) {
-	.account {
-		height: 2375px;
-	}
-
 	.account__card {
-		height: 295px;
-		width: 295px;
+		height: 275px;
+		width: 275px;
 	}
 
 	.account__card_nohover {
-		height: 295px;
-		width: 295px;
+		height: 275px;
+		width: 275px;
 	}
 
 	.account h2 {
@@ -462,18 +451,18 @@
 }
 
 @media screen and (max-width: 480px) {
-	.account {
-		height: 2275px;
-	}
-
 	.account__card {
-		height: 275px;
-		width: 275px;
+		height: 195px;
+		width: 195px;
 	}
 
 	.account__card_nohover {
-		height: 275px;
-		width: 275px;
+		height: 195px;
+		width: 195px;
+	}
+
+	.account__container h2 {
+		font-size: 2rem;
 	}
 }
 
