--- a/styles.css
+++ b/styles.css
@@ -478,6 +478,47 @@
 	}
 }
 
+
+/* The work section */
+
+.work__card {
+	padding-bottom: 5rem;
+	margin-left: 5rem;
+	margin-right: 5rem;
+	margin-top: 7.5rem;
+	height: 300px;
+	width: 500px;
+	border: 8px solid var(--border-color);
+	box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.8);
+	background-image: linear-gradient(
+		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%);
+	border-radius: 15%;
+	background-repeat: no-repeat;
+	position: relative;
+	background-size: cover;
+	background-position: center;
+	text-decoration: none;
+	color: #fff;
+}
+
+
+#infiniteEmbat {
+	background-image: url('./images/Previews/Infinite/1.png');
+}
+
+.work__card h1 {
+	position: relative;
+	top: -65px;
+	font-size: 2.25rem;
+}
+
+
+.work__card p {
+	font-size: 1.8rem;
+}
+
+/* The about me section */
+
 #about_container {
 	height: auto;
 	display: flex;
