--- a/styles.css
+++ b/styles.css
@@ -501,6 +501,11 @@
 	color: #fff;
 }
 
+.work__card:hover {
+	transform: scale(1.04);
+	transition: 0.2s ease-in;
+	cursor: pointer;
+}
 
 #infiniteEmbat {
 	background-image: url('./images/Previews/Infinite/1.png');
@@ -512,9 +517,15 @@
 	font-size: 2.25rem;
 }
 
-
 .work__card p {
 	font-size: 1.8rem;
+}
+
+@media screen and (max-width: 520px) {
+	.work__card {
+		width: 300px;
+		height: 225px;
+	}
 }
 
 /* The about me section */
