--- a/styles.css
+++ b/styles.css
@@ -519,8 +519,8 @@
 
 @media screen and (max-width: 520px) {
 	.work__card {
-		width: 300px;
-		height: 225px;
+		margin-left: 1rem;
+		margin-right: 1rem;
 	}
 }
 
