--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+html {
+	background-color: var(--main-color);
+}
+
 .navbar {
 	background: var(--navbar-color);
 	height: 80px;
